# crowd_transcribe

./: .env  .gitignore  CLAUDE.md  README.md  main.py  media.db  openapi.yaml  pyproject.toml  python-project-builder.md
src/crowd_transcribe/: config.py
src/crowd_transcribe/domain/: exceptions.py  file_manager.py  schema.py
src/crowd_transcribe/infrastructure/: database.py  dependency_injection.py  s3_client.py  sefaria_client.py  sqlite_db.py
src/crowd_transcribe/services/: audio_service.py  media_sync.py  routes.py  tasks_service.py
